# skygate

./: .env.example  .gitignore  DECISIONS.md  README.md  main.py  memory_fix.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: assistant.py  config.py  schemas.py
app/llm/: client.py  prompts.py
app/tools/: aggregate_tool.py  column_resolver.py  delete_tool.py  excel_store.py  filter_engine.py  insert_tool.py  query_tool.py  schema_tool.py  update_tool.py
app/utils/: formatters.py  logging_setup.py
data/: Marketing Campaigns.original.xlsx
data/working/: Marketing Campaigns.xlsx  Real Estate Listings.xlsx
